<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.edit_fragment.EditStoreFragment">

    <!-- Linear layout vertical -->
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/spacing_md">

        <!-- Name -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/store_name"
            app:helperText="@string/required"
            app:endIconMode="clear_text"
            app:counterMaxLength="@integer/counter_max_name"
            app:counterEnabled="true"
            app:startIconDrawable="@drawable/ic_store"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="@integer/counter_max_name"
                android:inputType="textCapWords"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Phone -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_md"
            android:hint="@string/phone"
            app:helperText="@string/required"
            app:endIconMode="clear_text"
            app:counterMaxLength="@integer/counter_max_phone"
            app:counterEnabled="true"
            app:startIconDrawable="@drawable/ic_phone"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="@integer/counter_max_phone"
                android:inputType="phone"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Website -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilWebsite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_md"
            android:hint="@string/website"
            app:helperText="@string/required"
            app:endIconMode="clear_text"
            app:startIconDrawable="@drawable/ic_link2"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etWebsite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/color_link"
                android:maxLines="@integer/lines_url_website"
                android:minLines="@integer/lines_url_website"
                android:inputType="textMultiLine"/>
        </com.google.android.material.textfield.TextInputLayout>
        
       

        <!-- Linear layout horizontal-->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/spacing_md"
            android:gravity="center_horizontal">

            <!-- Photo url -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilPhotoUrl"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/image_url"
                app:helperText="@string/required"
                app:endIconMode="clear_text"
                app:startIconDrawable="@drawable/ic_link">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPhotoUrl"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?attr/textAppearanceCaption"
                    android:maxLines="@integer/lines_url_photo"
                    android:minLines="@integer/lines_url_photo"
                    android:inputType="textMultiLine"/>
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Image -->
            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imgPhoto"
                android:layout_width="@dimen/photo_size_thumb"
                android:layout_height="@dimen/photo_size_thumb"
                android:src="@drawable/ic_image"
                android:layout_marginStart="@dimen/spacing_md"
                android:contentDescription="@string/store_image"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.core.widget.NestedScrollView>